Pico-Kassius-Leonardo-Wagner-etapa4/src/y.output
Terminais que não foram usados

   QUOTE
   DQUOTE
   FOR
   NEXT
   UNTIL
   REPEAT


Gramática

    0 $accept: code $end

    1 code: declaracoes acoes
    2     | acoes

    3 declaracoes: declaracao ';'
    4            | declaracoes declaracao ';'

    5 declaracao: listadeclaracao ':' tipo

    6 listadeclaracao: IDF
    7                | IDF ',' listadeclaracao

    8 tipo: tipounico
    9     | tipolista

   10 tipounico: INT
   11          | DOUBLE
   12          | FLOAT
   13          | CHAR

   14 tipolista: INT '[' listadupla ']'
   15          | DOUBLE '[' listadupla ']'
   16          | FLOAT '[' listadupla ']'
   17          | CHAR '[' listadupla ']'

   18 listadupla: INT_LIT ':' INT_LIT
   19           | INT_LIT ':' INT_LIT ',' listadupla

   20 acoes: comando ';'
   21      | comando ';' acoes

   22 comando: lvalue '=' expr
   23        | enunciado

   24 lvalue: IDF
   25       | IDF '[' listaexpr ']'

   26 listaexpr: expr
   27          | expr ',' listaexpr

   28 expr: expr '+' expr
   29     | expr '-' expr
   30     | expr '*' expr
   31     | expr '/' expr
   32     | '(' expr ')'
   33     | INT_LIT
   34     | F_LIT
   35     | lvalue
   36     | chamaproc

   37 chamaproc: IDF '(' listaexpr ')'

   38 enunciado: expr
   39          | IF '(' expbool ')' THEN acoes fiminstcontrole
   40          | WHILE '(' expbool ')' '{' acoes '}'

   41 fiminstcontrole: END
   42                | ELSE acoes END

   43 expbool: TRUE
   44        | FALSE
   45        | '(' expbool ')'
   46        | expbool AND expbool
   47        | expbool OR expbool
   48        | NOT expbool
   49        | expr '>' expr
   50        | expr '<' expr
   51        | expr LE expr
   52        | expr GE expr
   53        | expr EQ expr
   54        | expr NE expr


Terminais, com as regras onde eles aparecem

$end (0) 0
'(' (40) 32 37 39 40 45
')' (41) 32 37 39 40 45
'*' (42) 30
'+' (43) 28
',' (44) 7 19 27
'-' (45) 29
'/' (47) 31
':' (58) 5 18 19
';' (59) 3 4 20 21
'<' (60) 50
'=' (61) 22
'>' (62) 49
'[' (91) 14 15 16 17 25
']' (93) 14 15 16 17 25
'{' (123) 40
'}' (125) 40
error (256)
IDF (258) 6 7 24 25 37
INT (259) 10 14
DOUBLE (260) 11 15
FLOAT (261) 12 16
CHAR (262) 13 17
QUOTE (263)
DQUOTE (264)
LE (265) 51
GE (266) 52
EQ (267) 53
NE (268) 54
AND (269) 46
OR (270) 47
NOT (271) 48
IF (272) 39
THEN (273) 39
ELSE (274) 42
WHILE (275) 40
INT_LIT (276) 18 19 33
F_LIT (277) 34
END (278) 41 42
TRUE (279) 43
FALSE (280) 44
FOR (281)
NEXT (282)
UNTIL (283)
REPEAT (284)


Não-terminais com as regras onde eles aparecem

$accept (46)
    à esquerda: 0
code (47)
    à esquerda: 1 2, à direita: 0
declaracoes (48)
    à esquerda: 3 4, à direita: 1 4
declaracao (49)
    à esquerda: 5, à direita: 3 4
listadeclaracao (50)
    à esquerda: 6 7, à direita: 5 7
tipo (51)
    à esquerda: 8 9, à direita: 5
tipounico (52)
    à esquerda: 10 11 12 13, à direita: 8
tipolista (53)
    à esquerda: 14 15 16 17, à direita: 9
listadupla (54)
    à esquerda: 18 19, à direita: 14 15 16 17 19
acoes (55)
    à esquerda: 20 21, à direita: 1 2 21 39 40 42
comando (56)
    à esquerda: 22 23, à direita: 20 21
lvalue (57)
    à esquerda: 24 25, à direita: 22 35
listaexpr (58)
    à esquerda: 26 27, à direita: 25 27 37
expr (59)
    à esquerda: 28 29 30 31 32 33 34 35 36, à direita: 22 26 27 28
    29 30 31 32 38 49 50 51 52 53 54
chamaproc (60)
    à esquerda: 37, à direita: 36
enunciado (61)
    à esquerda: 38 39 40, à direita: 23
fiminstcontrole (62)
    à esquerda: 41 42, à direita: 39
expbool (63)
    à esquerda: 43 44 45 46 47 48 49 50 51 52 53 54,
    à direita: 39 40 45 46 47 48


estado 0

    0 $accept: . code $end

    IDF      deslocar, e ir ao estado 1
    IF       deslocar, e ir ao estado 2
    WHILE    deslocar, e ir ao estado 3
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    code             ir ao estado 7
    declaracoes      ir ao estado 8
    declaracao       ir ao estado 9
    listadeclaracao  ir ao estado 10
    acoes            ir ao estado 11
    comando          ir ao estado 12
    lvalue           ir ao estado 13
    expr             ir ao estado 14
    chamaproc        ir ao estado 15
    enunciado        ir ao estado 16


estado 1

    6 listadeclaracao: IDF .
    7                | IDF . ',' listadeclaracao
   24 lvalue: IDF .
   25       | IDF . '[' listaexpr ']'
   37 chamaproc: IDF . '(' listaexpr ')'

    ','  deslocar, e ir ao estado 17
    '['  deslocar, e ir ao estado 18
    '('  deslocar, e ir ao estado 19

    ':'       reduzir usando a regra 6 (listadeclaracao)
    $padrão  reduzir usando a regra 24 (lvalue)


estado 2

   39 enunciado: IF . '(' expbool ')' THEN acoes fiminstcontrole

    '('  deslocar, e ir ao estado 20


estado 3

   40 enunciado: WHILE . '(' expbool ')' '{' acoes '}'

    '('  deslocar, e ir ao estado 21


estado 4

   33 expr: INT_LIT .

    $padrão  reduzir usando a regra 33 (expr)


estado 5

   34 expr: F_LIT .

    $padrão  reduzir usando a regra 34 (expr)


estado 6

   32 expr: '(' . expr ')'

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 24
    chamaproc  ir ao estado 15


estado 7

    0 $accept: code . $end

    $end  deslocar, e ir ao estado 25


estado 8

    1 code: declaracoes . acoes
    4 declaracoes: declaracoes . declaracao ';'

    IDF      deslocar, e ir ao estado 1
    IF       deslocar, e ir ao estado 2
    WHILE    deslocar, e ir ao estado 3
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    declaracao       ir ao estado 26
    listadeclaracao  ir ao estado 10
    acoes            ir ao estado 27
    comando          ir ao estado 12
    lvalue           ir ao estado 13
    expr             ir ao estado 14
    chamaproc        ir ao estado 15
    enunciado        ir ao estado 16


estado 9

    3 declaracoes: declaracao . ';'

    ';'  deslocar, e ir ao estado 28


estado 10

    5 declaracao: listadeclaracao . ':' tipo

    ':'  deslocar, e ir ao estado 29


estado 11

    2 code: acoes .

    $padrão  reduzir usando a regra 2 (code)


estado 12

   20 acoes: comando . ';'
   21      | comando . ';' acoes

    ';'  deslocar, e ir ao estado 30


estado 13

   22 comando: lvalue . '=' expr
   35 expr: lvalue .

    '='  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 35 (expr)


estado 14

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   38 enunciado: expr .

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 38 (enunciado)


estado 15

   36 expr: chamaproc .

    $padrão  reduzir usando a regra 36 (expr)


estado 16

   23 comando: enunciado .

    $padrão  reduzir usando a regra 23 (comando)


estado 17

    7 listadeclaracao: IDF ',' . listadeclaracao

    IDF  deslocar, e ir ao estado 36

    listadeclaracao  ir ao estado 37


estado 18

   25 lvalue: IDF '[' . listaexpr ']'

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    listaexpr  ir ao estado 38
    expr       ir ao estado 39
    chamaproc  ir ao estado 15


estado 19

   37 chamaproc: IDF '(' . listaexpr ')'

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    listaexpr  ir ao estado 40
    expr       ir ao estado 39
    chamaproc  ir ao estado 15


estado 20

   39 enunciado: IF '(' . expbool ')' THEN acoes fiminstcontrole

    IDF      deslocar, e ir ao estado 22
    NOT      deslocar, e ir ao estado 41
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    TRUE     deslocar, e ir ao estado 42
    FALSE    deslocar, e ir ao estado 43
    '('      deslocar, e ir ao estado 44

    lvalue     ir ao estado 23
    expr       ir ao estado 45
    chamaproc  ir ao estado 15
    expbool    ir ao estado 46


estado 21

   40 enunciado: WHILE '(' . expbool ')' '{' acoes '}'

    IDF      deslocar, e ir ao estado 22
    NOT      deslocar, e ir ao estado 41
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    TRUE     deslocar, e ir ao estado 42
    FALSE    deslocar, e ir ao estado 43
    '('      deslocar, e ir ao estado 44

    lvalue     ir ao estado 23
    expr       ir ao estado 45
    chamaproc  ir ao estado 15
    expbool    ir ao estado 47


estado 22

   24 lvalue: IDF .
   25       | IDF . '[' listaexpr ']'
   37 chamaproc: IDF . '(' listaexpr ')'

    '['  deslocar, e ir ao estado 18
    '('  deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 24 (lvalue)


estado 23

   35 expr: lvalue .

    $padrão  reduzir usando a regra 35 (expr)


estado 24

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | '(' expr . ')'

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35
    ')'  deslocar, e ir ao estado 48


estado 25

    0 $accept: code $end .

    $padrão  aceitar


estado 26

    4 declaracoes: declaracoes declaracao . ';'

    ';'  deslocar, e ir ao estado 49


estado 27

    1 code: declaracoes acoes .

    $padrão  reduzir usando a regra 1 (code)


estado 28

    3 declaracoes: declaracao ';' .

    $padrão  reduzir usando a regra 3 (declaracoes)


estado 29

    5 declaracao: listadeclaracao ':' . tipo

    INT     deslocar, e ir ao estado 50
    DOUBLE  deslocar, e ir ao estado 51
    FLOAT   deslocar, e ir ao estado 52
    CHAR    deslocar, e ir ao estado 53

    tipo       ir ao estado 54
    tipounico  ir ao estado 55
    tipolista  ir ao estado 56


estado 30

   20 acoes: comando ';' .
   21      | comando ';' . acoes

    IDF      deslocar, e ir ao estado 22
    IF       deslocar, e ir ao estado 2
    WHILE    deslocar, e ir ao estado 3
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 20 (acoes)

    acoes      ir ao estado 57
    comando    ir ao estado 12
    lvalue     ir ao estado 13
    expr       ir ao estado 14
    chamaproc  ir ao estado 15
    enunciado  ir ao estado 16


estado 31

   22 comando: lvalue '=' . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 58
    chamaproc  ir ao estado 15


estado 32

   28 expr: expr '+' . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 59
    chamaproc  ir ao estado 15


estado 33

   29 expr: expr '-' . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 60
    chamaproc  ir ao estado 15


estado 34

   30 expr: expr '*' . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 61
    chamaproc  ir ao estado 15


estado 35

   31 expr: expr '/' . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 62
    chamaproc  ir ao estado 15


estado 36

    6 listadeclaracao: IDF .
    7                | IDF . ',' listadeclaracao

    ','  deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 6 (listadeclaracao)


estado 37

    7 listadeclaracao: IDF ',' listadeclaracao .

    $padrão  reduzir usando a regra 7 (listadeclaracao)


estado 38

   25 lvalue: IDF '[' listaexpr . ']'

    ']'  deslocar, e ir ao estado 63


estado 39

   26 listaexpr: expr .
   27          | expr . ',' listaexpr
   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35
    ','  deslocar, e ir ao estado 64

    $padrão  reduzir usando a regra 26 (listaexpr)


estado 40

   37 chamaproc: IDF '(' listaexpr . ')'

    ')'  deslocar, e ir ao estado 65


estado 41

   48 expbool: NOT . expbool

    IDF      deslocar, e ir ao estado 22
    NOT      deslocar, e ir ao estado 41
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    TRUE     deslocar, e ir ao estado 42
    FALSE    deslocar, e ir ao estado 43
    '('      deslocar, e ir ao estado 44

    lvalue     ir ao estado 23
    expr       ir ao estado 45
    chamaproc  ir ao estado 15
    expbool    ir ao estado 66


estado 42

   43 expbool: TRUE .

    $padrão  reduzir usando a regra 43 (expbool)


estado 43

   44 expbool: FALSE .

    $padrão  reduzir usando a regra 44 (expbool)


estado 44

   32 expr: '(' . expr ')'
   45 expbool: '(' . expbool ')'

    IDF      deslocar, e ir ao estado 22
    NOT      deslocar, e ir ao estado 41
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    TRUE     deslocar, e ir ao estado 42
    FALSE    deslocar, e ir ao estado 43
    '('      deslocar, e ir ao estado 44

    lvalue     ir ao estado 23
    expr       ir ao estado 67
    chamaproc  ir ao estado 15
    expbool    ir ao estado 68


estado 45

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   49 expbool: expr . '>' expr
   50        | expr . '<' expr
   51        | expr . LE expr
   52        | expr . GE expr
   53        | expr . EQ expr
   54        | expr . NE expr

    LE   deslocar, e ir ao estado 69
    GE   deslocar, e ir ao estado 70
    EQ   deslocar, e ir ao estado 71
    NE   deslocar, e ir ao estado 72
    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35
    '>'  deslocar, e ir ao estado 73
    '<'  deslocar, e ir ao estado 74


estado 46

   39 enunciado: IF '(' expbool . ')' THEN acoes fiminstcontrole
   46 expbool: expbool . AND expbool
   47        | expbool . OR expbool

    AND  deslocar, e ir ao estado 75
    OR   deslocar, e ir ao estado 76
    ')'  deslocar, e ir ao estado 77


estado 47

   40 enunciado: WHILE '(' expbool . ')' '{' acoes '}'
   46 expbool: expbool . AND expbool
   47        | expbool . OR expbool

    AND  deslocar, e ir ao estado 75
    OR   deslocar, e ir ao estado 76
    ')'  deslocar, e ir ao estado 78


estado 48

   32 expr: '(' expr ')' .

    $padrão  reduzir usando a regra 32 (expr)


estado 49

    4 declaracoes: declaracoes declaracao ';' .

    $padrão  reduzir usando a regra 4 (declaracoes)


estado 50

   10 tipounico: INT .
   14 tipolista: INT . '[' listadupla ']'

    '['  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 10 (tipounico)


estado 51

   11 tipounico: DOUBLE .
   15 tipolista: DOUBLE . '[' listadupla ']'

    '['  deslocar, e ir ao estado 80

    $padrão  reduzir usando a regra 11 (tipounico)


estado 52

   12 tipounico: FLOAT .
   16 tipolista: FLOAT . '[' listadupla ']'

    '['  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 12 (tipounico)


estado 53

   13 tipounico: CHAR .
   17 tipolista: CHAR . '[' listadupla ']'

    '['  deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 13 (tipounico)


estado 54

    5 declaracao: listadeclaracao ':' tipo .

    $padrão  reduzir usando a regra 5 (declaracao)


estado 55

    8 tipo: tipounico .

    $padrão  reduzir usando a regra 8 (tipo)


estado 56

    9 tipo: tipolista .

    $padrão  reduzir usando a regra 9 (tipo)


estado 57

   21 acoes: comando ';' acoes .

    $padrão  reduzir usando a regra 21 (acoes)


estado 58

   22 comando: lvalue '=' expr .
   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 22 (comando)


estado 59

   28 expr: expr . '+' expr
   28     | expr '+' expr .
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr

    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 28 (expr)


estado 60

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   29     | expr '-' expr .
   30     | expr . '*' expr
   31     | expr . '/' expr

    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 29 (expr)


estado 61

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   30     | expr '*' expr .
   31     | expr . '/' expr

    $padrão  reduzir usando a regra 30 (expr)


estado 62

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   31     | expr '/' expr .

    $padrão  reduzir usando a regra 31 (expr)


estado 63

   25 lvalue: IDF '[' listaexpr ']' .

    $padrão  reduzir usando a regra 25 (lvalue)


estado 64

   27 listaexpr: expr ',' . listaexpr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    listaexpr  ir ao estado 83
    expr       ir ao estado 39
    chamaproc  ir ao estado 15


estado 65

   37 chamaproc: IDF '(' listaexpr ')' .

    $padrão  reduzir usando a regra 37 (chamaproc)


estado 66

   46 expbool: expbool . AND expbool
   47        | expbool . OR expbool
   48        | NOT expbool .

    $padrão  reduzir usando a regra 48 (expbool)


estado 67

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | '(' expr . ')'
   49 expbool: expr . '>' expr
   50        | expr . '<' expr
   51        | expr . LE expr
   52        | expr . GE expr
   53        | expr . EQ expr
   54        | expr . NE expr

    LE   deslocar, e ir ao estado 69
    GE   deslocar, e ir ao estado 70
    EQ   deslocar, e ir ao estado 71
    NE   deslocar, e ir ao estado 72
    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35
    ')'  deslocar, e ir ao estado 48
    '>'  deslocar, e ir ao estado 73
    '<'  deslocar, e ir ao estado 74


estado 68

   45 expbool: '(' expbool . ')'
   46        | expbool . AND expbool
   47        | expbool . OR expbool

    AND  deslocar, e ir ao estado 75
    OR   deslocar, e ir ao estado 76
    ')'  deslocar, e ir ao estado 84


estado 69

   51 expbool: expr LE . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 85
    chamaproc  ir ao estado 15


estado 70

   52 expbool: expr GE . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 86
    chamaproc  ir ao estado 15


estado 71

   53 expbool: expr EQ . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 87
    chamaproc  ir ao estado 15


estado 72

   54 expbool: expr NE . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 88
    chamaproc  ir ao estado 15


estado 73

   49 expbool: expr '>' . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 89
    chamaproc  ir ao estado 15


estado 74

   50 expbool: expr '<' . expr

    IDF      deslocar, e ir ao estado 22
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    lvalue     ir ao estado 23
    expr       ir ao estado 90
    chamaproc  ir ao estado 15


estado 75

   46 expbool: expbool AND . expbool

    IDF      deslocar, e ir ao estado 22
    NOT      deslocar, e ir ao estado 41
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    TRUE     deslocar, e ir ao estado 42
    FALSE    deslocar, e ir ao estado 43
    '('      deslocar, e ir ao estado 44

    lvalue     ir ao estado 23
    expr       ir ao estado 45
    chamaproc  ir ao estado 15
    expbool    ir ao estado 91


estado 76

   47 expbool: expbool OR . expbool

    IDF      deslocar, e ir ao estado 22
    NOT      deslocar, e ir ao estado 41
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    TRUE     deslocar, e ir ao estado 42
    FALSE    deslocar, e ir ao estado 43
    '('      deslocar, e ir ao estado 44

    lvalue     ir ao estado 23
    expr       ir ao estado 45
    chamaproc  ir ao estado 15
    expbool    ir ao estado 92


estado 77

   39 enunciado: IF '(' expbool ')' . THEN acoes fiminstcontrole

    THEN  deslocar, e ir ao estado 93


estado 78

   40 enunciado: WHILE '(' expbool ')' . '{' acoes '}'

    '{'  deslocar, e ir ao estado 94


estado 79

   14 tipolista: INT '[' . listadupla ']'

    INT_LIT  deslocar, e ir ao estado 95

    listadupla  ir ao estado 96


estado 80

   15 tipolista: DOUBLE '[' . listadupla ']'

    INT_LIT  deslocar, e ir ao estado 95

    listadupla  ir ao estado 97


estado 81

   16 tipolista: FLOAT '[' . listadupla ']'

    INT_LIT  deslocar, e ir ao estado 95

    listadupla  ir ao estado 98


estado 82

   17 tipolista: CHAR '[' . listadupla ']'

    INT_LIT  deslocar, e ir ao estado 95

    listadupla  ir ao estado 99


estado 83

   27 listaexpr: expr ',' listaexpr .

    $padrão  reduzir usando a regra 27 (listaexpr)


estado 84

   45 expbool: '(' expbool ')' .

    $padrão  reduzir usando a regra 45 (expbool)


estado 85

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   51 expbool: expr LE expr .

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 51 (expbool)


estado 86

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   52 expbool: expr GE expr .

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 52 (expbool)


estado 87

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   53 expbool: expr EQ expr .

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 53 (expbool)


estado 88

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   54 expbool: expr NE expr .

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 54 (expbool)


estado 89

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   49 expbool: expr '>' expr .

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 49 (expbool)


estado 90

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   50 expbool: expr '<' expr .

    '+'  deslocar, e ir ao estado 32
    '-'  deslocar, e ir ao estado 33
    '*'  deslocar, e ir ao estado 34
    '/'  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 50 (expbool)


estado 91

   46 expbool: expbool . AND expbool
   46        | expbool AND expbool .
   47        | expbool . OR expbool

    $padrão  reduzir usando a regra 46 (expbool)


estado 92

   46 expbool: expbool . AND expbool
   47        | expbool . OR expbool
   47        | expbool OR expbool .

    $padrão  reduzir usando a regra 47 (expbool)


estado 93

   39 enunciado: IF '(' expbool ')' THEN . acoes fiminstcontrole

    IDF      deslocar, e ir ao estado 22
    IF       deslocar, e ir ao estado 2
    WHILE    deslocar, e ir ao estado 3
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    acoes      ir ao estado 100
    comando    ir ao estado 12
    lvalue     ir ao estado 13
    expr       ir ao estado 14
    chamaproc  ir ao estado 15
    enunciado  ir ao estado 16


estado 94

   40 enunciado: WHILE '(' expbool ')' '{' . acoes '}'

    IDF      deslocar, e ir ao estado 22
    IF       deslocar, e ir ao estado 2
    WHILE    deslocar, e ir ao estado 3
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    acoes      ir ao estado 101
    comando    ir ao estado 12
    lvalue     ir ao estado 13
    expr       ir ao estado 14
    chamaproc  ir ao estado 15
    enunciado  ir ao estado 16


estado 95

   18 listadupla: INT_LIT . ':' INT_LIT
   19           | INT_LIT . ':' INT_LIT ',' listadupla

    ':'  deslocar, e ir ao estado 102


estado 96

   14 tipolista: INT '[' listadupla . ']'

    ']'  deslocar, e ir ao estado 103


estado 97

   15 tipolista: DOUBLE '[' listadupla . ']'

    ']'  deslocar, e ir ao estado 104


estado 98

   16 tipolista: FLOAT '[' listadupla . ']'

    ']'  deslocar, e ir ao estado 105


estado 99

   17 tipolista: CHAR '[' listadupla . ']'

    ']'  deslocar, e ir ao estado 106


estado 100

   39 enunciado: IF '(' expbool ')' THEN acoes . fiminstcontrole

    ELSE  deslocar, e ir ao estado 107
    END   deslocar, e ir ao estado 108

    fiminstcontrole  ir ao estado 109


estado 101

   40 enunciado: WHILE '(' expbool ')' '{' acoes . '}'

    '}'  deslocar, e ir ao estado 110


estado 102

   18 listadupla: INT_LIT ':' . INT_LIT
   19           | INT_LIT ':' . INT_LIT ',' listadupla

    INT_LIT  deslocar, e ir ao estado 111


estado 103

   14 tipolista: INT '[' listadupla ']' .

    $padrão  reduzir usando a regra 14 (tipolista)


estado 104

   15 tipolista: DOUBLE '[' listadupla ']' .

    $padrão  reduzir usando a regra 15 (tipolista)


estado 105

   16 tipolista: FLOAT '[' listadupla ']' .

    $padrão  reduzir usando a regra 16 (tipolista)


estado 106

   17 tipolista: CHAR '[' listadupla ']' .

    $padrão  reduzir usando a regra 17 (tipolista)


estado 107

   42 fiminstcontrole: ELSE . acoes END

    IDF      deslocar, e ir ao estado 22
    IF       deslocar, e ir ao estado 2
    WHILE    deslocar, e ir ao estado 3
    INT_LIT  deslocar, e ir ao estado 4
    F_LIT    deslocar, e ir ao estado 5
    '('      deslocar, e ir ao estado 6

    acoes      ir ao estado 112
    comando    ir ao estado 12
    lvalue     ir ao estado 13
    expr       ir ao estado 14
    chamaproc  ir ao estado 15
    enunciado  ir ao estado 16


estado 108

   41 fiminstcontrole: END .

    $padrão  reduzir usando a regra 41 (fiminstcontrole)


estado 109

   39 enunciado: IF '(' expbool ')' THEN acoes fiminstcontrole .

    $padrão  reduzir usando a regra 39 (enunciado)


estado 110

   40 enunciado: WHILE '(' expbool ')' '{' acoes '}' .

    $padrão  reduzir usando a regra 40 (enunciado)


estado 111

   18 listadupla: INT_LIT ':' INT_LIT .
   19           | INT_LIT ':' INT_LIT . ',' listadupla

    ','  deslocar, e ir ao estado 113

    $padrão  reduzir usando a regra 18 (listadupla)


estado 112

   42 fiminstcontrole: ELSE acoes . END

    END  deslocar, e ir ao estado 114


estado 113

   19 listadupla: INT_LIT ':' INT_LIT ',' . listadupla

    INT_LIT  deslocar, e ir ao estado 95

    listadupla  ir ao estado 115


estado 114

   42 fiminstcontrole: ELSE acoes END .

    $padrão  reduzir usando a regra 42 (fiminstcontrole)


estado 115

   19 listadupla: INT_LIT ':' INT_LIT ',' listadupla .

    $padrão  reduzir usando a regra 19 (listadupla)
